[b]Version 0.6.0rc1 (not released yet)[/b]:

(2008-01-26)
 * Now it's possible to zoom out on the video image.
 * Cosmetic change: now the mouse icon in Preferences->Interface->Seeking
   has the same size as the icons above.
 * Moved to old-txt some outdated txt files.
 * Updated Release_notes.txt, with the changes since version 0.5.62.
 * Now under Windows, the main window will never start hidden even if the 
   system tray icon is shown. This should fix bug #1851817.
   On linux the behavior didn't change, as this is the way other applications
   work.

(2008-01-25)
 * Updated the FAQ.
 * If changing the size of the normal (no -ass) subtitles requires to
   restart mplayer (because using an old version or configured this way)
   the size will increase or decrease in steps of 1, instead of 0.2, to
   make the resize faster.
 * Added an option in Preferences->Subtitles to set the default font scale
   for SSA/ASS subtitles. This has required to redesigned the section.

(2008-01-24)
 * Using now the sub_scale slave command for -ass subtitles. This allows to
   change the font size on runtime. Requires MPlayer r25843.
 * Now the font scale is stored in two independent variables, one if not
   using libass and another if using it. This is because the same value
   produces very different font sizes. A value of 7 can display subtitles
   with a normal size if not using libass, but if libass is enabled the 
   font will be  huge.
   Important: the Scale option in Preferences->Subtitles, which sets the
   initial font scale for new videos, will now be only used if libass is 
   disabled.
   It has been added a similar option for libass, but currently it can only 
   be changed by editing smplayer.ini (initial_sub_scale_ass, default value 1).

(2008-01-22)
 * Now the delay to update the video while dragging the time slider can
   be configured in smplayer.ini, option time_slider_drag_delay. The
   value by default is 100 (milliseconds).